objects/SMM_Implementations__c.object
<CustomObject>
    <fields>
        <fullName>Email_Frequency__c</fullName>
        <label>Email Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Multiple Daily</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emarketing_License_Type__c</fullName>
        <label>Emarketing License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not purchased</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emarketing__c</fullName>
        <label>Emarketing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Adoption_Status__c</fullName>
        <label>Event Adoption Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_License_Type__c</fullName>
        <label>Event License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <label>Revised Expected Imp Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_IMP_Completion_Date__c</fullName>
        <label>Expected IMP Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expedited_Implementation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expedited Implementation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Contact__c</fullName>
        <formula>IF(
OR(
ISNULL(First_Contact_with_the_client__c),ISNULL(Contract_Close_Date__c)),"",
Text((First_Contact_with_the_client__c  -  Contract_Close_Date__c))&amp;" Days")</formula>
        <label>First Contact with client in</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Contact_with_the_client__c</fullName>
        <label>First Contact with the client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GDS_Implemented_IMP_Level__c</fullName>
        <label>GDS Implemented (IMP Level)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1-2</fullName>
                </value>
                <value>
                    <fullName>3-4</fullName>
                </value>
                <value>
                    <fullName>5+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDS__c</fullName>
        <label>GDS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Apollo</fullName>
                </value>
                <value>
                    <fullName>Galileo</fullName>
                </value>
                <value>
                    <fullName>Sabre-Direct</fullName>
                </value>
                <value>
                    <fullName>Sabre-NuTravel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Scope__c</fullName>
        <label>Global Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCP__c</fullName>
        <label>HCP/ SDPP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMP_Billable_Hours_Ratio__c</fullName>
        <formula>Imp_Consultant_Billable_Hours__c /( Imp_Consultant_Billable_Hours__c +  Imp_Consultant_Non_Billable_Hours__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMP Billable Hours Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IMP_Hours_Execution_Variance__c</fullName>
        <formula>PS_Contracted_Hours__c  -  Imp_Consultant_Billable_Hours__c</formula>
        <label>IMP Hours Execution Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IMP_Hours_Planning_Variance__c</fullName>
        <formula>PS_Contracted_Hours__c - PS_Estimated_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMP Hours Planning Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IMP_Plan_Type__c</fullName>
        <label>IMP Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Standard with BW AM</fullName>
                </value>
                <value>
                    <fullName>Global with BW AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMP_Training_calls_per_Week__c</fullName>
        <label>Calls per Week</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4+</fullName>
                </value>
                <value>
                    <fullName>2-3</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>&lt;1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMP_load_Factor__c</fullName>
        <formula>IF(OR(ISPICKVAL(Implementation_Status__c,"Pending Close Out Call"),ISPICKVAL(Implementation_Status__c,"Stalled"),(Test__c &gt;=1 &amp;&amp; Test__c&lt;=26)),1, 
IF((Test__c &gt;=27 &amp;&amp; Test__c&lt;=47),2, 
IF((Test__c &gt;=48 &amp;&amp; Test__c&lt;=68),3, 
IF((Test__c &gt;=69 &amp;&amp; Test__c&lt;=89),4, 
IF((Test__c &gt;=90 &amp;&amp; Test__c&lt;=110),5, 
IF((Test__c &gt;=111 &amp;&amp; Test__c&lt;=131),6, 
IF((Test__c &gt;=132 &amp;&amp; Test__c&lt;=152),7, 
IF((Test__c &gt;=153 &amp;&amp; Test__c&lt;=173),8, 
IF((Test__c &gt;=174 &amp;&amp; Test__c&lt;=194),9, 
IF((Test__c &gt;=195 &amp;&amp; Test__c&lt;=240),10,0 
))))) 
) 
) 
)))</formula>
        <label>IMP Load Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Imp_Analyst_Dynamic_Rating__c</fullName>
        <label>Imp Analyst Dynamic Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Imp_Consultant_Billable_Hours__c</fullName>
        <label>Imp Billable Hours</label>
        <summarizedField>Time_Stamp__c.Time_Spent__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Stamp__c.Time_Spent__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Time_Stamp__c.Please_select_your_role__c</field>
            <operation>equals</operation>
            <value>Implementation Consultant, Implementation Analyst</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Stamp__c.SMM_Implementations__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Imp_Consultant_Dynamic_Rating__c</fullName>
        <label>Imp Consultant Dynamic Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Imp_Consultant_Non_Billable_Hours__c</fullName>
        <label>Imp Non Billable Hours</label>
        <summarizedField>Time_Stamp__c.Time_Spent_Non_Billable_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Stamp__c.Time_Spent_Non_Billable_Hours__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Time_Stamp__c.Please_select_your_role__c</field>
            <operation>equals</operation>
            <value>Implementation Consultant, Implementation Analyst</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Stamp__c.SMM_Implementations__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Implementation_Analyst_Record_ID__c</fullName>
        <formula>Implementation_Analyst__r.Id</formula>
        <label>Implementation Analyst (Record ID)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SMM_Implementations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Consultant_Record_ID__c</fullName>
        <formula>Implementation_Consultant__r.Id</formula>
        <label>Implementation Consultant (Record ID)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SMM_Implementations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Duration_In_Weeks__c</fullName>
        <formula>(Close_Out_Call_Date__c  -  Kick_Off_Date__c)/7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Duration(In Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Notes__c</fullName>
        <label>Implementation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Project_Name__c</fullName>
        <label>Implementation Project Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Status__c</fullName>
        <label>Implementation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scoped for Sales</fullName>
                </value>
                <value>
                    <fullName>Pending Assignment</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending Close Out Call</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Stalled</fullName>
                </value>
                <value>
                    <fullName>No IMP - SA Managed</fullName>
                </value>
                <value>
                    <fullName>No IMP - Transition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <label>Implementation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rush</fullName>
                </value>
                <value>
                    <fullName>Expedite</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Multi-Phase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Expected_Imp_Completion_Date__c</fullName>
        <label>Expected Imp Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Go_Live_Date__c</fullName>
        <label>Initial Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inquisium_license_type__c</fullName>
        <label>Inquisium license type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not purchased</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Free Trial</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Meeting_Space__c</fullName>
        <label>Internal Meeting Space</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kick_Off_Date__c</fullName>
        <label>Kick Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kicked_off_w_o_Contract__c</fullName>
        <label>Kicked off w/o Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Lanyon__c</fullName>
        <label>Legacy Lanyon</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_of_AM_PC_support__c</fullName>
        <label>Level of AM PC support Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketo__c</fullName>
        <label>Marketo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not purchased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultiLevel_Approval__c</fullName>
        <label>MultiLevel Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_Phase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi Phase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OBT_Name__c</fullName>
        <label>OBT Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Amex</fullName>
                </value>
                <value>
                    <fullName>Concur</fullName>
                </value>
                <value>
                    <fullName>GetThere</fullName>
                </value>
                <value>
                    <fullName>Reardon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Of_Users_Sourcing__c</fullName>
        <label># Of Users Sourcing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnArrival_License_Type__c</fullName>
        <label>OnArrival License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OnArrival</fullName>
                    <default>true</default>
                    <label>OnArrival</label>
                </value>
                <value>
                    <fullName>OnArrival Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Arrival__c</fullName>
        <label>On Arrival</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ongoing_Scope__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ongoing Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_Booking_Tool__c</fullName>
        <label>Online Booking Tool</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onsite_Solutions__c</fullName>
        <label>Onsite Solutions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not purchased</fullName>
                </value>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Contract_Close_Date__c</fullName>
        <label>Original Contract Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Over_6_months_post_implementation__c</fullName>
        <formula>If(
(
(Today() - Close_Out_Call_Date__c) / 30)&lt;=6,"No","Yes")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Over 6 months post implementation?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNR_Integration__c</fullName>
        <label>PNR Integration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_Banked_Hours__c</fullName>
        <label>Banked IMP Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Contracted_Hours__c</fullName>
        <label>Contracted IMP Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Estimated_Hours__c</fullName>
        <label>Estimated IMP Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Remaining_Contracted_Hours__c</fullName>
        <formula>PS_Contracted_Hours__c  -  Imp_Consultant_Billable_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Contracted Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SMM_Implementations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Child_Notes__c</fullName>
        <label>Parent / Child Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Purchase_Concern_Comments__c</fullName>
        <label>Post Purchase Concern Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Post_Purchase_Concern__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Purchase Concern</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Purchase_Reason__c</fullName>
        <label>Post Purchase Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Post_Purchase_Concern__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service Expectations</fullName>
                </value>
                <value>
                    <fullName>Timelines</fullName>
                </value>
                <value>
                    <fullName>Contracting Issue</fullName>
                </value>
                <value>
                    <fullName>Not a Fit/Workaround Reliant</fullName>
                </value>
                <value>
                    <fullName>Presold Feature</fullName>
                </value>
                <value>
                    <fullName>No TSC/Demo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_SMM_System__c</fullName>
        <label>Legacy System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Lanyon/Starcite</fullName>
                </value>
                <value>
                    <fullName>eTouches</fullName>
                </value>
                <value>
                    <fullName>Signup4</fullName>
                </value>
                <value>
                    <fullName>Ungerboeck</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No Previous Tech</fullName>
                </value>
                <value>
                    <fullName>Cendyn/Metron</fullName>
                </value>
                <value>
                    <fullName>Certain</fullName>
                </value>
                <value>
                    <fullName>EventPro</fullName>
                </value>
                <value>
                    <fullName>iMIS</fullName>
                </value>
                <value>
                    <fullName>ReadyReg</fullName>
                </value>
                <value>
                    <fullName>RegOnline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Focus__c</fullName>
        <label>Module of Primary Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SMM</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>CSN</fullName>
                </value>
                <value>
                    <fullName>HCP</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Equal Importance</fullName>
                </value>
                <value>
                    <fullName>Unique Use Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_POC_Record_ID__c</fullName>
        <formula>Primary_POC__r.Id</formula>
        <label>Primary POC (Record ID)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary POC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SMM_Implementations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Forms__c</fullName>
        <label>Process Forms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Urgency__c</fullName>
        <label>Project Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rushed/Condensed</fullName>
                </value>
                <value>
                    <fullName>Expedited</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projected_Kick_off_date__c</fullName>
        <label>Projected Kick off date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Management_License_Type__c</fullName>
        <label>RFP Management License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Purchased</fullName>
                </value>
                <value>
                    <fullName>Internal Meeting Space</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>